# CouncilQ

./: .agents-cli-spec.md  .env.example  .gitignore  AGENTS.md  README.md  agent.py  config.py  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  __init__.py  agent.py  answer.py  api.py  context_compression.py  document_ingestion.py  grounding.py  policy.py  query_rewrite.py  rag.py  rerank.py  retrieval.py  skills.py  telemetry.py  tools.py  vector_db.py  workflow_nodes.py
docs/: architecture.md
evals/: README.md  answer_cases.json  harness.py  judge.py  judge_cases.json  policy_cases.json  policy_harness.py  retrieval_cases.json
policies/: policies.yaml  privacy_policy.md  prompt_injection_policy.md  security_policy.md  source_policy.md  tool_policy.md
policies/evals/: expected_outputs.json  pii_redaction.json  prompt_injection.json  unsafe_tool_calls.json
scripts/: __init__.py  build_vector_db.py  download_documents.py  eval_retrieval.py
skills/: README.md
skills/.adk/: session.db
skills/policy_guard/: SKILL.md
skills/policy_guard/assets/: decision_schema.json
skills/policy_guard/evals/: expected_output.json  expected_tools.json  (+1 more)
skills/waste_and_recycling/: SKILL.md
specs/: eval_plan.md  product_spec.md  requirements.md  user_stories.md
tests/: README.md  test_api.py  test_document_ingestion.py  test_eval_harness.py  test_judge_evals.py  test_policy.py  test_policy_harness.py  test_rag.py  test_retrieval.py  test_retrieval_eval.py  test_skills.py  test_telemetry.py  test_trajectory_evals.py  test_vector_db.py  test_workflow_nodes.py
(+14 files in other folders)
