[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "councilq"
version = "0.1.0"
description = "Safety-first single-agent workflow assistant for City of Adelaide services."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
]

[project.scripts]
councilq-eval = "evals.harness:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
python_files = ["test_*.py"]
pythonpath = ["."]
